--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -119,5 +119,10 @@
         text-align: center;
         color: var(--color-white);
         opacity: 0.56;
+
+        @media (max-width: 640px) {
+            font-size: 14px;
+            line-height: 20px;
+        }
     }
 }
