--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -19,7 +19,7 @@
         text-align: center;
         color: var(--color-dark);
         opacity: 0.56;
-        margin-top: 40px;
+        margin-top: 24px;
         max-width: 671px;
 
         @media (max-width: 640px) {
@@ -60,7 +60,15 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        margin-top: calc(40px - 24px);
+        margin-top: calc(100px - 24px);
+
+        @media (max-width: 640px) {
+            margin-top: calc(80px - 16px);
+        }
+
+        @media (max-width: 390px) {
+            margin-top: calc(40px - 16px);
+        }
     }
     &__item {
         display: flex;
@@ -112,7 +120,7 @@
             }
         }
         &-title {
-            margin-top: 56px;
+            margin-top: 24px;
 
             @media (max-width: 960px) {
                 margin-top: 0;
@@ -132,7 +140,8 @@
                 line-height: 24px;
             }
 
-            @media (max-width: 390px) {}
+            @media (max-width: 390px) {
+            }
         }
         &-link {
             margin-top: 56px;
@@ -141,7 +150,8 @@
                 margin-top: 42px;
             }
 
-            @media (max-width: 390px) {}
+            @media (max-width: 390px) {
+            }
         }
         &-img {
             width: 50%;
@@ -305,6 +315,12 @@
         @media (max-width: 800px) {
             font-size: 16px;
             line-height: 24px;
+        }
+
+        @media (max-width: 390px) {
+            font-size: 14px;
+            line-height: 20px;
+            padding: 22px 16px;
         }
     }
     &__options {
