--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -330,33 +330,34 @@
         transition: opacity 600ms, visibility 600ms;
         position: absolute;
         top: 80px;
-        padding-top: 25px;
+        padding-top: 9px;
         overflow: hidden;
         background: #fff;
         box-shadow: -2px -2px 4px rgba(177, 177, 177, 0.2), 2px 2px 4px rgba(177, 177, 177, 0.2);
         border-radius: 10px;
         z-index: 50;
 
-        @media (max-width: 800px) {
-            position: fixed;
-            bottom: 0;
-            top: unset;
-            left: 0;
-            right: 0;
-            border-radius: 10px 10px 0 0;
-        }
-
         &-container {
             height: 100%;
             overflow: auto;
         }
         &-spheres {
-            width: 600px;
-            height: 600px;
+            height: 500px;
+            width: calc(100vw - 2 * 40px);
+            max-width: 600px;
+            min-width: 15vw;
 
-            @media (max-width: 800px) {
-                width: 100%;
-                height: 80%;
+            @media (max-width: 640px) {
+                height: 400px;
+                width: calc(100vw - 2 * 20px);
+            }
+
+            @media (max-width: 390px) {
+                width: calc(100vw - 2 * 16px);
+            }
+
+            @media (max-width: 320px) {
+                width: calc(100vw - 2 * 10px);
             }
         }
         &-technologies {
