added 3D images in section what-we-do

--- a/_includes/home/section-what-we-do.html
+++ b/_includes/home/section-what-we-do.html
@@ -1,16 +1,19 @@
 <section class="what-we-do">
     <div class="container flex-container">
         <h4 class="h4">Что мы делаем</h4>
-        <h2 class="h2 section-title">Приоритетные для нас сферы</h2>
+        <h2 class="h2 section-title">У нас есть опыт в этих сферах</h2>
         <div class="what-we-do__items">
-            <a href="{{site.baseurl}}/projects" class="what-we-do__item what-we-do__item1">
-                <h3 class="what-we-do__item1-title h3">Цифровизация бизнес-процессов</h3>
+            <a href="{{site.baseurl}}/projects" class="what-we-do__item item1">
+                <h3 class="h3 what-we-do__item-title">Цифровизация<br/> бизнес-процессов</h3>
             </a>
-            <a href="{{site.baseurl}}/projects" class="what-we-do__item what-we-do__item2">
-                <h3 class="what-we-do__item2-title h3">Системы управления проектами</h3>
+            <a href="{{site.baseurl}}/projects" class="what-we-do__item item2">
+                <h3 class="h3 what-we-do__item-title">Системы управления проектами</h3>
             </a>
-            <a href="{{site.baseurl}}/projects" class="what-we-do__item what-we-do__item3">
-                <h3 class="what-we-do__item3-title h3">Электронный документооборот</h3>
+            <a href="{{site.baseurl}}/projects" class="what-we-do__item item3">
+                <h3 class="h3 what-we-do__item-title">Электронный документооборот</h3>
+            </a>
+            <a href="{{site.baseurl}}/projects" class="what-we-do__item item4">
+                <h3 class="h3 what-we-do__item-title">Посмотреть все сфер</h3>
             </a>
         </div>
     </div>
