added 3d images in sections what-we-do, why-we. change contacts page

--- a/_includes/home/section-how-we-work.html
+++ b/_includes/home/section-how-we-work.html
@@ -13,7 +13,7 @@
                     <a href="#" class="link how-we-work__item-link modal-btn">Получить консультацию</a>
                 </div>
                 <div class="how-we-work__item-center">
-                    <img class="how-we-work__item-img" src="{{ site.baseurl }}/assets/img/rocket-rotate2.png" alt="" />
+                    <img class="how-we-work__item-img" src="{{ site.baseurl }}/assets/img/home/from-scratch.png" alt="from-scratch" />
                 </div>
             </div>
             <div class="how-we-work__item how-we-work__item--reverse">
@@ -26,7 +26,7 @@
                     <a href="#" class="link how-we-work__item-link modal-btn">Расчитать смету по ТЗ</a>
                 </div>
                 <div class="how-we-work__item-center">
-                    <img class="how-we-work__item-img" src="{{ site.baseurl }}/assets/img/dart.png" alt="" />
+                    <img class="how-we-work__item-img" src="{{ site.baseurl }}/assets/img/home/project-work.png" alt="project-work" />
                 </div>
             </div>
             <div class="how-we-work__item">
@@ -39,7 +39,7 @@
                     <a href="#" class="link how-we-work__item-link modal-btn">Написать нам</a>
                 </div>
                 <div class="how-we-work__item-center">
-                    <img class="how-we-work__item-img" src="{{ site.baseurl }}/assets/img/calc.png" alt="" />
+                    <img class="how-we-work__item-img" src="{{ site.baseurl }}/assets/img/home/agile-development.png" alt="agile-development" />
                 </div>
             </div>
         </div>
