--- a/_includes/home/section-what-we-do.html
+++ b/_includes/home/section-what-we-do.html
@@ -13,7 +13,7 @@
                 <h3 class="h3 what-we-do__item-title">Электронный документооборот</h3>
             </a>
             <a href="{{site.baseurl}}/projects" class="what-we-do__item item4">
-                <h3 class="h3 what-we-do__item-title">Посмотреть все сфер</h3>
+                <h3 class="h3 what-we-do__item-title">Посмотреть все сферы</h3>
             </a>
         </div>
     </div>
