--- a/_includes/home/section-why-we.html
+++ b/_includes/home/section-why-we.html
@@ -3,26 +3,18 @@
         <h4 class="h4">Почему мы</h4>
         <h2 class="h2 section-title">IT-бюро со штатом сильных специалистов</h2>
         <div class="why-we__items">
-            <div class="why-we__item why-we__item1">
-                <h3 class="h3 why-we__item1-title">
-                    Умеем внедрять <br />
-                    программные системы <br />
-                    в больших компаниях
-                </h3>
+            <div class="why-we__item item1">
+                <h3 class="h3 why-we__item-title">100% наших проектов <br/>  доведены до финала</h3>
+                <img src="{{ site.baseurl }}/assets/img/home/final.png" alt="final" />
             </div>
-            <div class="why-we__item why-we__item2">
-                <h3 class="h3 why-we__item2-title">
-                    100% наших проектов <br />
-                    доведены до финала
-                </h3>
+            <div class="why-we__item item2">
+                <h3 class="h3 why-we__item-title">Умеем внедрять программные системы в больших компаниях</h3>
+                <img src="{{ site.baseurl }}/assets/img/home/implement.png" alt="implement" />
             </div>
-            <div class="why-we__item why-we__item3">
-                <h3 class="h3 why-we__item3-title">
-                    Помогаем сформулировать <br />
-                    требования, спроектировать <br />
-                    систему, написать <br />
-                    техническое задание
+            <div class="why-we__item item3">
+                <h3 class="h3 why-we__item-title">Помогаем сформулировать требования, спроектировать систему, написать техническое задание
                 </h3>
+                <img src="{{ site.baseurl }}/assets/img/home/engineering.png" alt="engineering" />
             </div>
         </div>
     </div>
