--- a/_sass/home/_section-why-we.scss
+++ b/_sass/home/_section-why-we.scss
@@ -13,7 +13,7 @@
             "item1 item2"
             "item3 item3";
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: repeat(2, 450px);
         grid-gap: 24px;
 
         @media (max-width: 960px) {
@@ -22,167 +22,112 @@
                 "item2"
                 "item3";
             grid-template-columns: 1fr;
-            grid-template-rows: 1fr;
-            grid-gap: 24px;
+            grid-template-rows: repeat(3, 450px);
         }
 
         @media (max-width: 640px) {
             margin-top: 60px;
         }
 
-        @media (max-width: 520px) {
+        @media (max-width: 390px) {
             margin-top: 40px;
-            gap: 16px;
+            grid-template-rows: repeat(3, 428px);
         }
     }
     &__item {
         width: 100%;
-        min-height: 450px;
         border-radius: 20px;
-        background-repeat: no-repeat, repeat;
-
-        @media (max-width: 640px) {
-            min-height: 300px;
-        }
-
-        @media (max-width: 520px) {
-            min-height: unset;
-        }
-    }
-    &__item1 {
-        grid-area: item1;
         background-color: var(--color-white);
-        background-image: url(img/search.png);
-        background-position: center bottom 23px;
-        background-size: 202px;
-
-        @media (max-width: 960px) {
-            background-position: right bottom;
-            background-size: 285px;
-        }
-
-        @media (max-width: 640px) {
-            background-size: 206px;
-        }
-
-        @media (max-width: 520px) {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-end;
-            height: 260px;
-            background-size: 140px;
-            background-position: center top 24px;
-        }
+        overflow: hidden;
 
         &-title {
             color: var(--color-dark);
-            margin-left: 56px;
-            margin-top: 56px;
+            margin: 56px 56px 0 56px;
 
             @media (max-width: 640px) {
-                margin-top: 40px;
-                margin-left: 40px;
+                margin: 40px 40px 0 40px;
             }
 
-            @media (max-width: 520px) {
-                margin: 24px;
+            @media (max-width: 390px) {
+                margin: 24px 24px 0 24px;
             }
 
             & br {
-                @media (max-width: 520px) {
+                @media (max-width: 960px) {
                     content: "";
                 }
             }
         }
-    }
-    &__item2 {
-        grid-area: item2;
-        background-color: var(--color-blush);
-        background-image: url(img/rocket.png);
-        background-position: center bottom;
-        background-size: 220px;
 
-        @media (max-width: 960px) {
-            background-position: right bottom;
-            background-size: 300px;
-        }
-
-        @media (max-width: 640px) {
-            background-size: 206px;
-        }
-
-        @media (max-width: 520px) {
+        &.item1 {
+            grid-area: item1;
             display: flex;
             flex-direction: column;
-            justify-content: flex-end;
-            height: 260px;
-            background-size: 140px;
-            background-position: center top 24px;
-        }
+            justify-content: space-between;
 
-        &-title {
-            color: var(--color-white);
-            margin-left: 56px;
-            margin-top: 56px;
+            & img {
+                width: 100%;
 
-            @media (max-width: 640px) {
-                margin-top: 40px;
-                margin-left: 40px;
-            }
-
-            @media (max-width: 520px) {
-                margin: 24px;
-            }
-
-            & br {
-                @media (max-width: 520px) {
-                    content: "";
+                @media (max-width: 390px) {
+                    object-fit: cover;
+                    height: 60%;
                 }
             }
         }
-    }
-    &__item3 {
-        grid-area: item3;
-        background-color: var(--color-purple);
-        background-image: url(img/calc.png);
-        background-position: right bottom;
-        background-size: 403px;
 
-        @media (max-width: 960px) {
-            background-position: right bottom;
-            background-size: 258px;
-        }
-
-        @media (max-width: 640px) {
-            background-size: 206px;
-        }
-
-        @media (max-width: 520px) {
+        &.item2 {
+            grid-area: item2;
             display: flex;
             flex-direction: column;
-            justify-content: flex-end;
-            height: 308px;
-            background-size: 140px;
-            background-position: center top 24px;
+            justify-content: space-between;
+
+            & img {
+                width: 100%;
+
+                @media (max-width: 390px) {
+                    object-fit: cover;
+                    height: 60%;
+                }
+            }
         }
 
-        &-title {
-            color: var(--color-white);
-            margin-left: 56px;
-            margin-top: 56px;
+        &.item3 {
+            grid-area: item3;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
 
-            @media (max-width: 640px) {
-                margin-top: 40px;
-                margin-left: 40px;
+            @media (max-width: 960px) {
+                flex-direction: column;
             }
 
-            @media (max-width: 520px) {
-                margin: 24px;
-            }
 
-            & br {
-                @media (max-width: 520px) {
-                    content: "";
+            & h3 {
+                width: 50%;
+
+                @media (max-width: 960px) {
+                    width: calc(100% - 2 * 56px);
+                }
+
+                @media (max-width: 640px) {
+                    width: calc(100% - 2 * 40px);
+                }
+
+                @media (max-width: 390px) {
+                    width: calc(100% - 2 * 24px);
+                }
+            }
+            & img {
+                width: 50%;
+                object-fit: contain;
+
+                @media (max-width: 960px) {
+                    width: 100%;
+                }
+
+                @media (max-width: 390px) {
+                    object-fit: cover;
+                    height: 60%;
                 }
             }
         }
