--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -32,6 +32,7 @@
             font-size: 14px;
             line-height: 20px;
             max-width: 285px;
+            margin-top: 16px;
         }
     }
     &-filters {
@@ -41,6 +42,14 @@
         flex-direction: row;
         align-items: center;
         justify-content: center;
+
+        @media (max-width: 640px) {
+            margin-top: 32px;
+        }
+
+        @media (max-width: 390px) {
+            margin-top: 16px;
+        }
 
         &-components {
             display: flex;
