--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -179,6 +179,7 @@
             &--center {
                 display: flex;
                 justify-content: center;
+                align-items: flex-end;
                 position: relative;
 
                 @media (max-width: 640px) {
@@ -189,6 +190,7 @@
                     position: absolute;
                     top: 56px;
                     max-width: 300px;
+                    height: 100%;
 
                     @media (max-width: 960px) {
                         max-width: 414px;
