--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -16,20 +16,18 @@
     }
     &__title {
         color: var(--color-white);
-        margin: 196px 177.5px 0 177.5px;
+        margin: 196px 177px 0 177px;
 
         @media (max-width: 960px) {
             margin: 150px 40px 0 40px;
         }
 
         @media (max-width: 640px) {
-            margin-left: 20px;
-            margin-right: 20px;
+            margin: 150px 20px 0 20px;
         }
 
         @media (max-width: 390px) {
-            margin-left: 16px;
-            margin-right: 16px;
+            margin: 150px 16px 0 16px;
         }
     }
     &__descr {
@@ -42,23 +40,19 @@
         margin: 40px 216px 0px 216px;
 
         @media (max-width: 960px) {
-            margin-left: 160.5px;
-            margin-right: 160.5px;
+            margin: 40px 160px 0px 160px;
         }
 
         @media (max-width: 640px) {
             font-size: 16px;
             line-height: 24px;
-            margin-top: 32px;
-            margin-left: 75px;
-            margin-right: 75px;
+            margin: 32px 75px 0 75px;
         }
 
         @media (max-width: 390px) {
             font-size: 14px;
             line-height: 20px;
-            margin-left: 24px;
-            margin-right: 24px;
+            margin: 16px 62px 0 62px;
         }
     }
 
@@ -69,6 +63,10 @@
         @media (max-width: 640px) {
             margin-top: 60px;
             padding: 18px 24px;
+        }
+
+        @media (max-width: 390px) {
+            margin-top: 40px;
         }
     }
 
