--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -91,23 +91,13 @@
 
         @media (max-width: 960px) {
             flex-direction: column-reverse;
+            min-height: unset;
         }
 
         @media (max-width: 640px) {
             margin-top: 16px;
         }
 
-        & > * {
-            margin: 56px;
-
-            @media (max-width: 960px) {
-                margin: 40px;
-            }
-
-            @media (max-width: 390px) {
-                margin: 24px;
-            }
-        }
         &--reverse {
             flex-direction: row-reverse;
 
@@ -115,26 +105,37 @@
                 flex-direction: column-reverse;
             }
         }
+
         &-content {
             display: flex;
             flex-direction: column;
-            width: 50%;
+            width: calc(50% - 2 * 56px);
+            margin: 56px;
 
             @media (max-width: 960px) {
                 width: calc(100% - 2 * 40px);
+                margin: 40px;
             }
 
             @media (max-width: 390px) {
                 width: calc(100% - 2 * 24px);
+                margin: 24px;
+            }
+
+            @media (max-width: 320px) {
+                width: calc(100% - 2 * 16px);
+                margin: 16px;
             }
         }
+
         &-title {
-            margin-top: 24px;
+            margin-top: 56px;
 
             @media (max-width: 960px) {
                 margin-top: 0;
             }
         }
+
         &-descr {
             margin-top: 24px;
             font-weight: 500;
@@ -143,13 +144,19 @@
             color: var(--color-dark);
             opacity: 0.56;
 
+            @media (max-width: 960px) {
+                margin-top: 16px;
+            }
+
             @media (max-width: 640px) {
-                margin-top: 4px;
                 font-size: 16px;
                 line-height: 24px;
             }
 
             @media (max-width: 390px) {
+                margin-top: 4px;
+                font-size: 14px;
+                line-height: 20px;
             }
         }
         &-link {
@@ -160,20 +167,34 @@
             }
 
             @media (max-width: 390px) {
+                margin-top: 24px;
             }
         }
         &-img {
-            width: 50%;
+            width: calc(50% - 2 * 56px);
+            margin: 56px;
             border-radius: 10px;
             overflow: hidden;
 
             @media (max-width: 960px) {
                 height: 560px;
                 width: calc(100% - 2 * 40px);
+                margin: 40px 40px 0 40px;
+            }
+
+            @media (max-width: 640px) {
+                height: 360px;
             }
 
             @media (max-width: 390px) {
+                height: 276px;
                 width: calc(100% - 2 * 24px);
+                margin: 24px 24px 0 24px;
+            }
+
+            @media (max-width: 320px) {
+                width: calc(100% - 2 * 16px);
+                margin: 16px 16px 0 16px;
             }
 
             &--center {
@@ -181,10 +202,6 @@
                 justify-content: center;
                 align-items: flex-end;
                 position: relative;
-
-                @media (max-width: 640px) {
-                    height: 320px;
-                }
 
                 & img {
                     position: absolute;
@@ -210,23 +227,15 @@
             &--left {
                 position: relative;
 
-                @media (max-width: 640px) {
-                    height: 320px;
-                }
-
                 & img {
                     position: absolute;
                     top: 56px;
                     right: 56px;
                     height: 100%;
 
-                    @media (max-width: 960px) {
-                        right: 260px;
-                    }
-
                     @media (max-width: 640px) {
                         top: 40px;
-                        right: 151px;
+                        right: 40px;
                     }
 
                     @media (max-width: 390px) {
@@ -238,23 +247,19 @@
             &--right {
                 position: relative;
 
-                @media (max-width: 640px) {
-                    height: 320px;
-                }
-
                 & img {
                     position: absolute;
                     top: 56px;
                     left: 56px;
                     height: 100%;
 
-                    @media (max-width: 960px) {
-                        left: 260px;
-                    }
+                    // @media (max-width: 960px) {
+                    //     left: 260px;
+                    // }
 
                     @media (max-width: 640px) {
                         top: 40px;
-                        left: 151px;
+                        left: 40px;
                     }
 
                     @media (max-width: 390px) {
