--- a/_includes/home/section-what-we-do.html
+++ b/_includes/home/section-what-we-do.html
@@ -3,13 +3,13 @@
         <h4 class="h4">Что мы делаем</h4>
         <h2 class="h2 section-title">У нас есть опыт в этих сферах</h2>
         <div class="what-we-do__items">
-            <a href="{{site.baseurl}}/projects" class="what-we-do__item item1">
+            <a href="{{site.baseurl}}/projects?sphere=business-processes" class="what-we-do__item item1">
                 <h3 class="h3 what-we-do__item-title">Цифровизация<br/> бизнес-процессов</h3>
             </a>
-            <a href="{{site.baseurl}}/projects" class="what-we-do__item item2">
+            <a href="{{site.baseurl}}/projects?sphere=project-management" class="what-we-do__item item2">
                 <h3 class="h3 what-we-do__item-title">Системы управления проектами</h3>
             </a>
-            <a href="{{site.baseurl}}/projects" class="what-we-do__item item3">
+            <a href="{{site.baseurl}}/projects?sphere=electronic-document" class="what-we-do__item item3">
                 <h3 class="h3 what-we-do__item-title">Электронный документооборот</h3>
             </a>
             <a href="{{site.baseurl}}/projects" class="what-we-do__item item4">
