--- a/_sass/_contacts.scss
+++ b/_sass/_contacts.scss
@@ -1,13 +1,19 @@
 .contacts {
     width: 100%;
+    height: 100vh;
+    min-height: 900px;
     
+    @media (max-width: 960px) {
+        height: unset;
+    }
+  
     &-container {
         display: flex;
         justify-content: center;
         flex-direction: column;
         max-width: 1280px;
         margin: 0 auto;
-        padding: 72px 40px 24px 40px;
+        padding: 72px 40px 20px 40px;
        
         @media (max-width: 640px) {
             padding: 72px 20px 24px 20px;
@@ -104,7 +110,7 @@
 
     &-form {
         &__item {
-            margin-top: 40px;
+            margin-top: 24px;
             display: flex;
             flex-direction: column;
             align-items: flex-start;
@@ -192,11 +198,12 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        margin-top: 80px;
+        margin-top: 24px;
 
         @media (max-width: 800px) {
             flex-direction: column;
             align-items: center;
+            margin-top: 80px;
         }
 
         @media (max-width: 390px) {
