add policy pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,8 @@
         <div class="footer__bottom">
             <p class="footer__text footer__company">© 2022 ООО «Цитрониум»</p>
             <div class="footer__bottom-right">
-                <p class="footer__text footer__personal">Политика обработки персональных данных</p>
-                <p class="footer__text footer__privacy">Политика конфиденциальности</p>
+                <a href="/policy-personal-data" class="footer__text footer__personal">Политика обработки персональных данных</p>
+                <a href="/privacy-policy" class="footer__text footer__privacy">Политика конфиденциальности</a>
             </div>
         </div>
     </div>
