fix for LC-10 and made header full width

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -52,7 +52,11 @@
         @media (max-width: 390px) {
             font-size: 14px;
             line-height: 20px;
-            margin: 16px 62px 0 62px;
+            margin: 16px 23.5px 0 23.5px;
+        }
+
+        @media (max-width: 390px) {
+            margin: 16px 26.5px 0 26.5px;
         }
     }
 
