--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -1,5 +1,24 @@
 .projects {
     width: 100%;
+
+    &-container {
+        max-width: 1280px;
+        margin: 0 auto;
+        padding: 72px 40px 100px 40px;
+
+        @media (max-width: 640px) {
+            padding: 72px 20px 80px 20px;
+        }
+
+        @media (max-width: 390px) {
+            padding: 72px 16px 80px 16px;
+        }
+
+        @media (max-width: 320px) {
+            padding: 72px 10px 80px 10px;
+        }
+    }
+
     &__title {
         color: var(--color-dark);
         margin-top: 100px;
