--- a/_layouts/document.html
+++ b/_layouts/document.html
@@ -12,7 +12,8 @@
     </main>
   </body>
   {%- include footer.html -%}
-  {%- include feedback-form.html -%}
+  {%- include feedback.html -%}
   {%- include mobile-menu.html -%}
   <script src="{{ site.baseurl | prepend: site.url }}/assets/js/script.js"></script>
+  <script src="{{ site.baseurl | prepend: site.url }}/assets/js/feedback.js"></script>
 </html>
