--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -5,7 +5,8 @@
     {%- include header.html -%}
     {{ content }}
   </body>
-  {%- include feedback-form.html -%}
+  {%- include feedback.html -%}
   {%- include mobile-menu.html -%}
   <script src="{{ site.baseurl | prepend: site.url }}/assets/js/script.js"></script>
+  <script src="{{ site.baseurl | prepend: site.url }}/assets/js/feedback.js"></script>
 </html>
