--- a/_sass/_contacts.scss
+++ b/_sass/_contacts.scss
@@ -1,12 +1,11 @@
 .contacts {
     width: 100%;
     height: 100vh;
-    min-height: 900px;
-    
+
     @media (max-width: 960px) {
         height: unset;
     }
-  
+
     &-container {
         display: flex;
         justify-content: center;
@@ -14,7 +13,7 @@
         max-width: 1280px;
         margin: 0 auto;
         padding: 72px 40px 20px 40px;
-       
+
         @media (max-width: 640px) {
             padding: 72px 20px 24px 20px;
         }
@@ -51,7 +50,7 @@
     }
 
     &__left {
-        background-color: #367cf4;
+        background: #ffffff;
         border-radius: 20px;
         padding: 56px;
         width: calc(50% - 12px);
@@ -79,6 +78,8 @@
         padding: 56px;
         width: calc(50% - 12px);
         margin-left: 12px;
+        display: flex;
+        flex-direction: column;
 
         @media (max-width: 960px) {
             width: 100%;
@@ -94,104 +95,26 @@
             padding: 24px;
         }
 
-        &-title {
-            color: #333333;
+        &-descr {
+            font-weight: 500;
+            font-size: 24px;
+            line-height: 32px;
+            color: rgba(51, 51, 51, 0.56);
+            margin-top: 8px;
+        }
+
+        &-btn {
+            margin-top: 40px;
         }
     }
 
     &__adress {
-        color: #ffffff;
+        color: #333333;
     }
 
     &__phone {
-        color: #ffffff;
+        color: #333333;
         margin-top: 24px;
-    }
-
-    &-form {
-        &__item {
-            margin-top: 24px;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: flex-start;
-
-            @media (max-width: 640px) {
-                margin-top: 24px;
-            }
-        }
-
-        &__label {
-            font-style: normal;
-            font-weight: 400;
-            font-size: 20px;
-            line-height: 24px;
-            color: #333333;
-
-            @media (max-width: 390px) {
-                font-size: 16px;
-                line-height: 20px;
-            }
-        }
-
-        &__input {
-            display: block;
-            height: 64px;
-            width: 100%;
-            margin-top: 8px;
-            padding: 20px;
-            border: 2px solid rgba(51, 51, 51, 0.2);
-            border-radius: 10px;
-            font-weight: 400;
-            font-size: 20px;
-            line-height: 24px;
-            color: black;
-
-            @media (max-width: 390px) {
-                font-size: 16px;
-                line-height: 20px;
-            }
-
-            &:focus {
-                outline: none;
-            }
-
-            &::placeholder {
-                font-style: normal;
-                font-weight: 400;
-                font-size: 20px;
-                line-height: 24px;
-                color: rgba(51, 51, 51, 0.56);
-
-                @media (max-width: 390px) {
-                    font-size: 16px;
-                    line-height: 20px;
-                }
-            }
-        }
-
-        &__btn {
-            padding: 10px 50px;
-            margin-top: 40px;
-            width: 100%;
-
-            @media (max-width: 640px) {
-                margin-top: 24px;
-            }
-        }
-
-        &__personal {
-            margin-top: 16px;
-            font-weight: 400;
-            font-size: 16px;
-            line-height: 24px;
-            color: rgba(0, 0, 0, 0.5);
-
-            @media (max-width: 320px) {
-                font-size: 14px;
-                line-height: 20px;
-            }
-        }
     }
 
     &__footer {
