--- a/_sass/_feedback-form.scss
+++ b/_sass/_feedback-form.scss
@@ -1,106 +1,78 @@
-.feedback {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 1005;
-    transform: scale(0);
-    transition: 0.4s ease;
-
-    &.active {
-        transform: scale(1);
-    }
-
-    &__container {
-        display: flex;
-        width: 100%;
+.feedback-form {
+    &-container {
         height: 100%;
-    }
-
-    &__body {
-        margin: auto;
-        max-width: 700px;
-        background-color: #fff;
-        border-radius: 10px;
-        padding: 56px;
-        position: relative;
-
-        @media (max-width: 640px) {
-            height: 100vh;
-            border-radius: 0;
-            width: 100%;
-        }
-
-        @media (max-width: 390px) {
-            padding: 48px 40px 40px 40px;
-        }
-
-        @media (max-width: 320px) {
-            padding: 48px 10px 10px 10px;
-        }
-    }
-
-    &__header {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
     }
 
     &__title {
         color: #333333;
     }
 
-    &__close {
-        font-size: 30px;
-        cursor: pointer;
-        color: rgba(0, 0, 0, 0.56);
+    &__item {
+        margin-top: 40px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: relative;
+
+        @media (max-width: 390px) {
+            margin-top: 32px;
+        }
     }
 
-    &-form {
-        &__item {
-            margin-top: 40px;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: flex-start;
+    &__label {
+        color: #000000;
+    }
 
-            @media (max-width: 390px) {
-                margin-top: 32px;
-            }
+    &__input {
+        margin-top: 8px;
+        color: black;
+
+        &.error {
+            border-color: red;
         }
+    }
 
-        &__label {
-            color: #000000;
+    &__error {
+        position: absolute;
+        bottom: -28px;
+        color: red;
+    }
+
+    &__btn {
+        padding: 10px 50px;
+        margin-top: 40px;
+        width: 100%;
+
+        // @media (max-width: 390px) {
+        //     margin-top: 24px;
+        // }
+    }
+
+    &__personal {
+        margin-top: 16px;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 24px;
+        color: rgba(0, 0, 0, 0.5);
+
+        @media (max-width: 390px) {
+            font-size: 14px;
+            line-height: 20px;
         }
+    }
 
-        &__input {
-            margin-top: 8px;
-            color: black;
-        }
+    &-message {
+        display: none;
+        position: relative;
+        height: 100%;
+        width: 100%;
 
-        &__btn {
-            padding: 10px 50px;
-            margin-top: 40px;
-            width: 100%;
+        align-items: center;
+        justify-content: center;
 
-            @media (max-width: 390px) {
-                margin-top: 24px;
-            }
-        }
-
-        &__personal {
-            margin-top: 16px;
-            font-weight: 400;
-            font-size: 16px;
-            line-height: 24px;
-            color: rgba(0, 0, 0, 0.5);
-
-            @media (max-width: 390px) {
-                font-size: 14px;
-                line-height: 20px;
-            }
+        &__text {
+            text-align: center;
         }
     }
 }
