--- a/_sass/_document.scss
+++ b/_sass/_document.scss
@@ -32,7 +32,7 @@
 
         & > h1 {
             font-style: normal;
-            font-weight: 400;
+            font-weight: 500;
             font-size: 40px;
             line-height: 40px;
             letter-spacing: -0.5px;
@@ -40,6 +40,16 @@
             margin-top: 50px;
             margin-bottom: 16px;
             text-align: center;
+
+            @media (max-width: 640px) {
+                font-size: 32px;
+                line-height: 32px;
+            }
+
+            @media (max-width: 390px) {
+                font-size: 24px;
+                line-height: 24px;
+            }
         }
 
         & > h2 {
@@ -50,6 +60,16 @@
             letter-spacing: -0.5px;
             color: #333333;
             margin-top: 50px;
+
+            @media (max-width: 640px) {
+                font-size: 24px;
+                line-height: 24px;
+            }
+
+            @media (max-width: 390px) {
+                font-size: 16px;
+                line-height: 16px;
+            }
         }
 
         & p {
