modify contacts page, add loader on feedback modal, fixes

--- a/_includes/feedback.html
+++ b/_includes/feedback.html
@@ -4,5 +4,9 @@
             <div id="feedback-close" class="feedback__close">&#10005</div>
             {%- include feedback-form.html -%}
         </div>
+        <div class="feedback-loader">
+            <span></span>
+            <span></span>
+        </div>
     </div>
 </div>
