--- a/_sass/_feedback-form.scss
+++ b/_sass/_feedback-form.scss
@@ -50,6 +50,7 @@
     }
 
     &__personal {
+        display: block;
         margin-top: 16px;
         font-weight: 400;
         font-size: 16px;
