--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -4,6 +4,7 @@
     top: 0;
     width: 100%;
     z-index: 100;
+    height: 72px;
     background: rgba(243, 244, 245, 0.9);
         backdrop-filter: blur(10px);
         
@@ -13,6 +14,7 @@
         margin: 0 auto;
         padding: 24px;
         display: flex;
+        height: 100%;
         align-items: center;
         justify-content: space-between;
         border-bottom: 1px solid #e5e7eb;
