--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -84,6 +84,10 @@
         justify-content: space-between;
         margin: 164px 40px 40px 40px;
 
+        @media (max-width: 960px) {
+            margin: 194px 40px 40px 40px;
+        }
+
         @media (max-width: 640px) {
             flex-direction: column;
             align-items: center;
